--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Ecommerce App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
